<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:background="@color/background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/content"
        android:orientation="vertical"
        android:padding="@dimen/PX50">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/line_blue_shape"
            android:drawablePadding="@dimen/PX30"
            android:text="@string/service_village"
            android:textColor="@color/white" />

        <include
            android:id="@+id/layout_village"
            layout="@layout/layout_scan_village" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/line_blue_shape"
        android:drawablePadding="@dimen/PX30"
        android:paddingBottom="@dimen/PX30"
        android:paddingLeft="@dimen/PX50"
        android:paddingRight="@dimen/PX50"
        android:paddingTop="@dimen/PX80"
        android:text="@string/village_list"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/PX80"
        android:background="@color/table_title"
        android:orientation="horizontal">

        <TextView style="@style/Horizontal_0M1" />

        <TextView
            style="@style/Horizontal_0M1"
            android:gravity="center_vertical"
            android:text="@string/band"
            android:textColor="@color/grey" />

        <TextView
            style="@style/Horizontal_0M1"
            android:layout_weight="1.5"
            android:gravity="center_vertical"
            android:text="@string/EARFCN"
            android:textColor="@color/grey" />

        <TextView
            style="@style/Horizontal_0M1"
            android:gravity="center_vertical"
            android:text="@string/PCI"
            android:textColor="@color/grey" />

        <TextView
            style="@style/Horizontal_0M1"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/RSRP"
            android:textColor="@color/grey" />

        <TextView
            style="@style/Horizontal_0M1"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/RSRQ"
            android:textColor="@color/grey" />
    </LinearLayout>


</LinearLayout>
