<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/PX100"
    android:background="@color/background"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_time"
        style="@style/Horizontal_0M1"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/PX30"
        android:text="@string/time"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tv_earfcn"
        style="@style/Horizontal_0M1"
        android:gravity="center"
        android:text="@string/EARFCN"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tv_pci"
        style="@style/Horizontal_0M1"
        android:gravity="center"
        android:text="@string/PCI"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tv_reason"
        style="@style/Horizontal_0M1"
        android:layout_weight="1.8"
        android:gravity="center"
        android:text="@string/reason"
        android:textColor="@color/white"
        android:textSize="13sp" />
</LinearLayout>
