<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/PX80"
        android:background="@color/table_title"
        android:orientation="horizontal">

        <TextView
            style="@style/Horizontal_0M1"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/PX30"
            android:text="@string/time"
            android:textColor="@color/grey" />

        <TextView
            style="@style/Horizontal_0M1"
            android:gravity="center"
            android:text="@string/EARFCN"
            android:textColor="@color/grey" />

        <TextView
            style="@style/Horizontal_0M1"
            android:gravity="center"
            android:text="@string/PCI"
            android:textColor="@color/grey" />

        <TextView
            style="@style/Horizontal_0M1"
            android:layout_weight="1.8"
            android:gravity="center"
            android:text="@string/reason"
            android:textColor="@color/grey" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
